# async-graphql-lambda

./: Cargo.toml  LICENSE-MIT  README.md
examples/starwars/: Cargo.toml  payload-v1.json  payload-v2.json
examples/starwars/src/: main.rs
examples/starwars/src/starwars/: model.rs
src/: error.rs  lib.rs  request.rs  response.rs
