[package]
name = "async-graphql-lambda"
version = "0.1.0"
edition = "2021"
authors = ["adrian <rust@adrianjdelgado.com>"]
description = "async-graphql for lambda-http"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/async-graphql-lambda"
homepage = "https://github.com/adriandelgado/async-graphql-lambda"
repository = "https://github.com/adriandelgado/async-graphql-lambda"
keywords = ["async", "graphql", "AWS", "Lambda", "APIGateway", "API"]
categories = ["network-programming", "asynchronous"]
readme = "README.md"
publish = false


[dependencies]
async-graphql = "3.0.38"
lambda_http = "0.5.1"
serde = "1.0.137"
serde_json = "1.0.80"
thiserror = "1.0.31"
